// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders Header with color being on a different page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="header color"
      >
        <div
          class="logo-container"
        >
          <a
            href="/"
          >
            <div
              class="logo"
              id="logo"
            >
              Logo
            </div>
          </a>
        </div>
        <div
          class="search-container"
        >
          <div
            class="search-bar"
          >
            <input
              placeholder="¿Qué estás buscando?"
              type="text"
              value=""
            />
            <button>
              <i
                class="fa fa-search"
              />
            </button>
          </div>
        </div>
        <div
          class="icon-container"
        >
          <a
            class="primary"
            href="/login"
          >
            <i
              class="fa fa-user"
              id="user-icon"
            />
            <div
              class="text"
            >
              Hola,
               
              <b>
                Ingresa
              </b>
            </div>
          </a>
        </div>
        <span
          class="material-symbols-outlined"
          id="shopping-cart"
        >
          shopping_cart
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="header color"
    >
      <div
        class="logo-container"
      >
        <a
          href="/"
        >
          <div
            class="logo"
            id="logo"
          >
            Logo
          </div>
        </a>
      </div>
      <div
        class="search-container"
      >
        <div
          class="search-bar"
        >
          <input
            placeholder="¿Qué estás buscando?"
            type="text"
            value=""
          />
          <button>
            <i
              class="fa fa-search"
            />
          </button>
        </div>
      </div>
      <div
        class="icon-container"
      >
        <a
          class="primary"
          href="/login"
        >
          <i
            class="fa fa-user"
            id="user-icon"
          />
          <div
            class="text"
          >
            Hola,
             
            <b>
              Ingresa
            </b>
          </div>
        </a>
      </div>
      <span
        class="material-symbols-outlined"
        id="shopping-cart"
      >
        shopping_cart
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header renders Header without problem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="header clean"
      >
        <div
          class="logo-container"
        >
          <a
            href="/"
          >
            <div
              class="logo"
              id="logo"
            >
              Logo
            </div>
          </a>
        </div>
        <div
          class="icon-container"
        >
          <a
            class="primary"
            href="/login"
          >
            <i
              class="fa fa-user"
              id="user-icon"
            />
            <div
              class="text"
            >
              Hola,
               
              <b>
                Ingresa
              </b>
            </div>
          </a>
        </div>
        <span
          class="material-symbols-outlined"
          id="shopping-cart"
        >
          shopping_cart
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="header clean"
    >
      <div
        class="logo-container"
      >
        <a
          href="/"
        >
          <div
            class="logo"
            id="logo"
          >
            Logo
          </div>
        </a>
      </div>
      <div
        class="icon-container"
      >
        <a
          class="primary"
          href="/login"
        >
          <i
            class="fa fa-user"
            id="user-icon"
          />
          <div
            class="text"
          >
            Hola,
             
            <b>
              Ingresa
            </b>
          </div>
        </a>
      </div>
      <span
        class="material-symbols-outlined"
        id="shopping-cart"
      >
        shopping_cart
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
